--- a/blocks/github.songxj99.experience_right_logo.scss
+++ b/blocks/github.songxj99.experience_right_logo.scss
@@ -1,4 +1,3 @@
-/* Add your block styles here */
 /*************************************************
  * Experience
  **************************************************/
@@ -37,3 +36,11 @@
   margin-bottom: 0;
 }
 
+.experience .m-2 .border,
+.experience .col.border-right {
+  border-color: $sta-primary !important;
+}
+
+.experience .m-2 .border.exp-fill {
+  background-color: $sta-primary !important;
+}
