--- a/blocks/github.songxj99.experience_right_logo.scss
+++ b/blocks/github.songxj99.experience_right_logo.scss
@@ -32,6 +32,6 @@
 
 // For a UL after P, remove the spacing between (P margin-bottom) without affecting any nested lists.
 .card .card-text p + ul {
-  margin-top: -2rem;
-  margin-bottom: -2rem;
+  margin-top: -1rem;
+  margin-bottom: 0;
 }
